--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!-- Middle Panel -->
 		<div class="panel">
 			<h3 id="textOutput" class="">Enter your guess below & press "enter"</h3>
-			<input  type="number" id="inputBox" onchange="function1()" >
+			<input  type="number" id="inputBox" onchange="main()" >
 			<p>Number of previous attempts: <span id="previousLength" >0</span></p>
 		</div>
 
